--- a/views/admin/create.handlebars
+++ b/views/admin/create.handlebars
@@ -1,21 +1,21 @@
 {{#if restaurant}}
   <form action="/admin/restaurants/{{restaurant.id}}?_method=PUT" method="POST" enctype="multipart/form-data">
-{{else}}
+  {{else}}
   <form action="/admin/restaurants" method="POST" enctype="multipart/form-data">
-{{/if}}
+  {{/if}}
   <div class="form-group">
     <label for="name">Name</label>
-    <input type="text" class="form-control" name="name" id="name" placeholder="Enter name" value="{{restaurant.name}}">
+    <input type="text" class="form-control" name="name" id="name" placeholder="Enter name" value="{{restaurant.name}}" maxlength="20">
   </div>
 
   <div class="form-group">
     <label for="tel">Tel</label>
-    <input type="text" class="form-control" name="tel" id="tel" placeholder="Enter tel" value="{{restaurant.tel}}">
+    <input type="text" class="form-control" name="tel" id="tel" placeholder="Enter tel" value="{{restaurant.tel}}" maxlength="20">
   </div>
 
   <div class="form-group">
     <label for="address">Address</label>
-    <input type="text" class="form-control" name="address" id="address" placeholder="Enter address" value="{{restaurant.address}}">
+    <input type="text" class="form-control" name="address" id="address" placeholder="Enter address" value="{{restaurant.address}}" maxlength="20">
   </div>
 
   <div class="form-group">
@@ -25,7 +25,7 @@
 
   <div class="form-group">
     <label for="description">Description</label>
-    <textarea class="form-control" id="description" name="description" rows="3">{{restaurant.description}}</textarea>
+    <textarea class="form-control" id="description" name="description" rows="3" maxlength="300">{{restaurant.description}}</textarea>
   </div>
 
   <div class="form-group">
