--- a/views/admin/restaurants.handlebars
+++ b/views/admin/restaurants.handlebars
@@ -1,9 +1,11 @@
-<h1>餐廳後台</h1>
+<h1>餐廳後台:餐廳管理</h1>
 
-<a href='/admin/restaurants/create'>
+<div class="btn">
+<a href='/admin/restaurants/create' class="mr-2">
   <button type="button" class="btn btn-primary">New Restaurant</button>
 </a>
-
+<a href="/admin/restaurants">Restaurants</a> | <a href="/admin/users">Users</a>
+</div>
 <br/>
 <br/>
 
@@ -31,9 +33,44 @@
             Edit
           </a>
         </button>
-        <form action="/admin/restaurants/{{this.id}}?_method=DELETE" method="POST" style="display: inline;">
-          <button type="submit" class="btn btn-link">Delete</button>
-        </form>
+    
+        <button type="button" class="btn btn-link" >
+          <a href="" data-toggle="modal" data-target="#modal-{{this.id}}">
+            Delete
+          </a>
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="modal-{{this.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">{{this.name}}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body text-center">
+                確定要刪除【{{this.name}}】嗎?
+              </div>
+              <div class="modal-footer align-items-center">
+                <button type="button" class="btn btn-secondary btn-sm " data-dismiss="modal">取消</button>
+                <form
+                  class="my-auto"
+                  action="/admin/restaurants/{{this.id}}?_method=DELETE"
+                  method="POST"
+                  >
+                  <button
+                    type="submit"
+                    class="btn btn-danger btn-sm mr-1"
+                    >刪除
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </td>
     </tr>
     {{/each}}
