--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,10 +29,12 @@
           {{#if user}}
             <span style="color: white;margin-right: 10px;">Hi,
               {{user.email}}</span>
-            <a
+            {{!-- 未完成 --}}
+            {{!-- <a
               href="/users/{{user.id}}"
               style="color: white;margin-right: 10px;"
-            >Profile</a>
+            >Profile
+            </a> --}}
             <a href="/logout"><button
                 class="btn btn-outline-success my-2 my-sm-0"
               >LogOut</button></a>
