--- a/views/admin/restaurants.handlebars
+++ b/views/admin/restaurants.handlebars
@@ -4,7 +4,9 @@
 <a href='/admin/restaurants/create' class="mr-2">
   <button type="button" class="btn btn-primary">New Restaurant</button>
 </a>
-<a href="/admin/restaurants">Restaurants</a> | <a href="/admin/users">Users</a>
+<a href="/admin/restaurants">Restaurants</a> | 
+<a href="/admin/users">Users</a> | 
+<a href='/admin/categories'>Categories</a>
 </div>
 <br/>
 <br/>
