--- a/views/admin/users.handlebars
+++ b/views/admin/users.handlebars
@@ -1,6 +1,8 @@
 <h1>餐廳後台:使用者權限管理</h1>
 
-<a href="/admin/restaurants">Restaurants</a> | <a href="/admin/users">Users</a>
+<a href="/admin/restaurants">Restaurants</a> | 
+<a href="/admin/users">Users</a> | 
+<a href='/admin/categories'>Categories</a>
 
 <br/>
 <br/>
