--- a/views/editUser.handlebars
+++ b/views/editUser.handlebars
@@ -4,7 +4,7 @@
   </div>
   <div class="form-label-group">
     <label for="inputName">Name</label>
-    <input type="text" name="name" class="form-control" placeholder="Name" value="{{user.name}}" required autofocus maxlength="20">
+    <input type="text" name="name" class="form-control" placeholder="Name" value="{{user.name}}" required autofocus maxlength="20" onkeyup="validateValue (this)"/>
   </div>
 
   <div class="form-group">
