--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,6 @@
     />
   </head>
   <body>
-
     {{! Navbar }}
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
       <a class="navbar-brand" href="/">餐廳評論網</a>
@@ -65,12 +64,13 @@
               {{error_messages}}
             </div>
           {{/if}}
-
+          
           {{{body}}}
         </div>
       </div>
     </main>
-  </body>
+  </body> 
+  <script src="/javascripts/index.js"></script>
   <script
     src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
