--- a/views/restaurant.handlebars
+++ b/views/restaurant.handlebars
@@ -54,7 +54,7 @@
 <form action="/comments" method="POST">
   <div class="form-group">
     <label for="text">留下評論：</label>
-    <textarea class="form-control" id="text" name="text" rows="3"></textarea>
+    <textarea class="form-control" id="text" name="text" rows="3" maxlength="200"></textarea>
   </div>
   <input type="hidden" name="restaurantId" value="{{restaurant.id}}" />
   <button type="submit" class="btn btn-primary">Submit</button>
