--- a/views/restaurant.handlebars
+++ b/views/restaurant.handlebars
@@ -24,10 +24,11 @@
       {{/if}}
 
       {{#if isLiked }}
-        <form action="/like/{{restaurant.id}}?_method=DELETE" method="POST" style="display: contents;"><button type="submit" class="btn btn-danger">Unlike</button></form>
+        <form action="/like/{{restaurant.id}}?_method=DELETE" method="POST" style="display: contents;"><button type="submit" class="btn btn-danger mr-2">Unlike</button></form>
       {{else}}
-        <form action="/like/{{restaurant.id}}" method="POST" style="display: contents;"><button type="submit" class="btn btn-primary">Like</button></form>
+        <form action="/like/{{restaurant.id}}" method="POST" style="display: contents;"><button type="submit" class="btn btn-primary mr-2">Like</button></form>
       {{/if}}
+      <a class="btn btn-primary" href="/restaurants/{{restaurant.id}}/dashboard" role="button">Dashboard</a>
     </div>
   </div>
   <hr>
