--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,9 +4,9 @@
 </div>
 <hr>
 <ul>
-  <li>評論數 : </li>
-  <li>瀏覽次數 : </li>
-  <li>瀏覽次數 : </li>
+  <li>評論數 : {{restaurant.commentCounts}}</li>
+  <li>瀏覽次數 : {{restaurant.viewCounts}}</li>
+  <li>收藏數 : {{restaurant.favoriteCounts}}</li>
 </ul>
 
 <a href="javascript:history.back()">回上一頁</a>
